# stiffness-matrix-eigenvalue

./: .gitignore  pyproject.toml
config/: .env
old/: eigenvalue.py  max_eigenvalue_hand.py  max_eigenvalue_lib.py  max_eigenvalue_lib_clean.py  max_eigenvalue_lib_legacy.py  old_max_eigenvalue.py  old_test_min_non_zero_eigenvalue.py
stiffness-eigenvalue/: pyproject.toml
stiffness-eigenvalue/config/: .env.example
stiffness-eigenvalue/old/: old_min_non_zero_eigenvalue.py  old_test_max_eigenvalue.py  old_test_min_non_zero_eigenvalue.py
stiffness-eigenvalue/stiffness_eigenvalue/: 1224_max_eigenvalue_lib.py  eigenvalue.py  framework.py  main.py  max_eigenvalue.py  max_eigenvalue_hand.py  max_eigenvalue_lib.py  max_eigenvalue_lib_clean.py  min-non-zero-eigenvalue.py  min_non_zero_eigenvalue.py  visualize.py
stiffness-eigenvalue/tests/: min-non_zero_eigenvalue_test.py  rigidity_matrix_example.py  test_eigenvalue.py  test_max_eigenvalue.py
stiffness_eigenvalue/: configure.py  framework.py  main.py  max_eigenvalue_lib.py  max_eigenvalue_lib_with_timeout.py  max_eigenvalue_lib_with_timeout_windows.py  visualize.py
tests/: test_max_eigenvalue.py
