[tool.poetry]
name = "stiffness-eigenvalue"
version = "0.1.0"
description = ""
authors = ["KentaroKajiyama <kemushi555@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
networkx = "^3.3"
rigidpy = "^0.0.8"
pytest = "^8.3.2"
joblib = "^1.4.2"
tqdm = "^4.66.5"
python-dotenv = "^1.0.1"
rich = "^13.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "stiffness_eigenvalue.main:main"
